<resources>
    <string name="app_name">Tarea2</string>
    <string name="next_bottom">Siguiente</string>
    <string name="tv1">Primer activity</string>

    <string name="back_bottom">Anterior</string>
    <string name="tv2">Segundo activity</string>

    <!-- Welcome -->
    <string name="welcome_message">Bienvenido</string>

    <!-- database -->
    <string name="txt_code">Codigo</string>
    <string name="txt_description">Descripcion</string>
    <string name="txt_price">Precio</string>

    <string name="register">Registrar Producto</string>
    <string name="search">Buscar Producto</string>
    <string name="update">Modificar Producto</string>
    <string name="delete">Eliminar Producto</string>

    <!-- Login -->
    <string name="Sign_In">Iniciar sesión</string>
    <string name="Sign_Out">Cerrar sesión</string>
    <string name="titleLogin">Hola! Identifiquese para iniciar sesión</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electronico</string>

    <!-- Register -->
    <string name="titleRegister">Hola, empieza registrandote</string>
    <string name="registerUser">Registrar</string>
    <string name="newUser">No tienes usuario? registrate!!</string>

    <!-- Welcome -->
    <string name="panel">Ingresar al panel</string>
</resources>