<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/neutral_600"
        android:text="@string/Sign_Out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/twWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:layout_marginBottom="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnViewPanel"
            android:text="@string/panel"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            style="@style/mainButton"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
