<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/wavy_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleLogin"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="-20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/mainTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/neutral_500"
            app:boxBackgroundMode="filled"
            app:boxCollapsedPaddingTop="8dp"
            app:boxStrokeColor="@color/secondary"
            app:hintTextColor="@color/transparent_white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/mainEditText"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/mainTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/neutral_500"
            app:boxBackgroundMode="filled"
            app:boxCollapsedPaddingTop="8dp"
            app:boxStrokeColor="@color/secondary"
            app:hintTextColor="@color/transparent_white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/mainEditText"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/secondary"
            android:text="@string/Sign_In" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent_white"
            android:text="@string/newUser"
            android:textColor="@color/neutral_700"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
